chore: retire legacy endpoints. update examples
